force-app/main/default/objects/Pricing_Fee__c/Pricing_Fee__c.object-meta.xml
<CustomObject>
    <label>Pricing Fee</label>
    <nameField>
        <label>Pricing Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>