force-app/main/default/objects/Pricing_Fee__c/fields/Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Type__c</fullName>
    <label>Calc Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>