force-app/main/default/objects/Pricing_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Type</label>
    <referenceTo>Fee_Type__c</referenceTo>
    <relationshipLabel>Pricing Fees</relationshipLabel>
    <relationshipName>Pricing_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>