force-app/main/default/objects/Pricing_Fee__c/fields/Fix_Float_Choice__c.field-meta.xml
<CustomField>
    <fullName>Fix_Float_Choice__c</fullName>
    <label>Fix/ Float/ Choice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>