force-app/main/default/objects/Pricing_Fee__c/fields/Invoice_Category__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Category__c</fullName>
    <label>Invoice Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>