force-app/main/default/objects/Pricing_Fee__c/fields/Pay_Rec__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rec__c</fullName>
    <label>Pay/Rec</label>
    <length>50</length>
    <type>Text</type>
</CustomField>