force-app/main/default/objects/Pricing_Fee__c/fields/Pricing_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scheme</label>
    <referenceTo>Pricing_Scheme__c</referenceTo>
    <relationshipLabel>Pricing Fees</relationshipLabel>
    <relationshipName>Pricing_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>