force-app/main/default/objects/Pricing_Fee__c/fields/Quote_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Frequency__c</fullName>
    <label>Quote Frequency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>