force-app/main/default/objects/Pricing_Fee__c/fields/TC_Category__c.field-meta.xml
<CustomField>
    <fullName>TC_Category__c</fullName>
    <label>TC Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>