force-app/main/default/objects/Pricing_Fee__c/fields/Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Volume_Type__c</fullName>
    <description>Volume Type from Endur (BAV, Billing, etc.)</description>
    <inlineHelpText>Volume Type from Endur (BAV, Billing, etc.)</inlineHelpText>
    <label>Volume Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>